--- a/DynamicArray/DynamicArray.vcxproj
+++ b/DynamicArray/DynamicArray.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClInclude Include="DynamicArray.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Source.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
